fix(close #102): update header logo size for not blurring on desktop

--- a/src/components/Common/Logo/Logo.scss
+++ b/src/components/Common/Logo/Logo.scss
@@ -1,8 +1,7 @@
 .logo {
-  width: 140px;
   margin-top: -2px;
 
   img {
-    width: 100%;
+    width: 130px;
   }
 }
